# plymouth-theme

./: meson.build  meson_options.txt
src/: meson.build
src/saturn-bgrt/: meson.build  saturn-bgrt.plymouth.desktop
src/soyuz-bgrt/: meson.build  soyuz-bgrt.plymouth.desktop
